# cloud-hypervisor

./: Cargo.aarch64.toml  Cargo.toml  README.md  download_binaries.sh  start_vm.sh
.github/workflows/: cross-build.yaml  quality-aarch64.yaml
acpi_tables/src/: aml.rs
arch/: Cargo.toml
arch/src/: lib.rs
arch/src/aarch64/: fdt.rs  gic.rs  gicv2.rs  gicv3.rs  gicv3_its.rs  layout.rs  mod.rs  regs.rs
arch/src/x86_64/: mod.rs
devices/: Cargo.toml
devices/src/: acpi.rs  gic.rs  interrupt_controller.rs  ioapic.rs  lib.rs
devices/src/legacy/: byte_order.rs  flash.rs  mod.rs  rtc_pl031.rs  time.rs
docs/: arm64.md
fuzz/: Cargo.toml
hypervisor/: Cargo.toml
hypervisor/src/: hypervisor.rs  lib.rs  vm.rs
hypervisor/src/arch/: mod.rs
hypervisor/src/arch/aarch64/: gic.rs
hypervisor/src/kvm/: mod.rs
hypervisor/src/kvm/aarch64/gic/: dist_regs.rs  gicv3.rs  gicv3_its.rs  icc_regs.rs  mod.rs  redist_regs.rs
pci/src/: bus.rs  configuration.rs  msi.rs  msix.rs  vfio.rs
resources/: Dockerfile  linux-config-aarch64
scripts/: dev_cli.sh  run_integration_tests_aarch64.sh
tests/: integration.rs
vfio/: Cargo.toml
vfio/src/: vfio_pci.rs
virtio-devices/: Cargo.toml
vm-allocator/: Cargo.toml
vm-allocator/src/: gsi.rs  lib.rs  system.rs
vm-device/src/interrupt/: mod.rs
vm-virtio/src/transport/: pci_common_config.rs  pci_device.rs
vmm/: Cargo.toml
vmm/src/: acpi.rs  cpu.rs  device_manager.rs  gdb.rs  interrupt.rs  lib.rs  memory_manager.rs  seccomp_filters.rs  vm.rs
