[package]
name = "arch"
version = "0.1.0"
authors = ["The Chromium OS Authors"]

[features]
default = []

[dependencies]
byteorder = "1.3.4"
kvm-bindings = { version= "0.2.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.5.0"
libc = "0.2.68"
vm-memory = { version = "0.1.0", features = ["backend-mmap"] }

acpi_tables = { path = "../acpi_tables", optional = true }
arch_gen = { path = "../arch_gen" }

[dependencies.linux-loader]
git = "https://github.com/michael2012z/linux-loader.git"
branch = "crab2313-aarch64-image"
features = ["elf", "bzimage", "pe"]

[dev-dependencies]
rand = "0.7.3"
device_tree = ">=1.1.0"
